# cookiecutters

python/{{cookiecutter.project_name}}/: tasks.json  test_{{cookiecutter.filename}}.py
quickie-python/: cookiecutter.json
quickie-python/{{cookiecutter.directory_name}}/: .dir-locals.el  Makefile  README.md  requirements.txt
quickie-python/{{cookiecutter.project_name}}/: Makefile  pyproject.toml  {{cookiecutter.filename}}.py
